--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "passport-facebook": "^2.1.1"
   }
 }
