--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongoose": "^4.5.9",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1"
